Fixed close icon issue on ios

--- a/src/frontend/src/app/asset-readings/asset-summary/asset-summary.component.css
+++ b/src/frontend/src/app/asset-readings/asset-summary/asset-summary.component.css
@@ -1,10 +1,11 @@
-.close {
+.delete {
   margin: 0;
   position: absolute;
   top: 2px;
-  right: -1px;
+  right: 2px;
   width: 23px;
   height: 23px;
+  font-size: 0;
 }
 
 [hidden] {
